# crb-roadside

./: .gitignore  README.md  crb_roadside_example.ipynb  find_trees.py  pyproject.toml  technical_notes.md
doc/source/: crb_roadside.rst
docs/: conf.py  requirements.txt
docs/source/: conf.py  index.rst  modules.rst
src/crb_roadside/: __init__.py  fiftyone_integration.py  find_trees.py  goodbye.py  say_hello.py  say_something.py  update_db.py  visualize.py
tests/: test_fiftyone_integration.py  test_find_trees.py  test_say_hello.py
