[project]
name = "crb-roadside"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { email = "aubreymoore2013@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "exif>=1.6.1",
    "fiftyone>=1.11.1",
    "ipywidgets>=8.1.8",
    "pandas>=2.3.3",
    "pytest>=9.0.2",
    "sphinx-rtd-theme>=3.1.0",
    "ultralytics",
]

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mkdocs-material>=9.7.1",
    "mkdocstrings[python]>=1.0.0",
]
docs = [
    "sphinx-rtd-theme>=3.1.0",
]
